# social-network

./: README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
server/: database.py  db.json  main.py  schemas.py
src/: App.css  App.js  App.jsx  App.tsx  main.tsx
src/api/: api.js
src/components/: Footer.js  Header.js  Profile.js  SideNavigation.js
src/components/Feed/: Feed.jsx  Feed.module.css
src/components/Footer/: Footer.css  Footer.jsx
src/components/Header/: Header.jsx  Header.module.css  HeaderContainer.jsx
src/components/Login/: Login.jsx
src/components/Messenger/: Messenger.jsx  Messenger.module.css  MessengerContainer.jsx
src/components/Messenger/Chat/: Chat.jsx
src/components/Messenger/Message/: Message.jsx
src/components/Profile/: Profile.jsx  Profile.module.css  ProfileContainer.jsx  ProfileStatus.jsx
src/components/Profile/Info/: ProfileInfo.jsx  ProfileInfo.module.css  ProfileInfo.tsx
src/components/Profile/Post/: PostItem.jsx  PostItem.module.css  PostList.jsx  PostList.module.css  PostListContainer.jsx
src/components/SideNavigation/: NavItem.tsx  SideNavigation.jsx  SideNavigation.module.css
src/components/Users/: Users.jsx  Users.module.css  UsersContainer.jsx
src/components/Utils/: NavItem.tsx
src/components/common/Preloader/: Preloader.jsx
src/hoc/: withAuthRedirect.jsx  withRouter.jsx
src/redux/: auth-reducer.js  messenger-reducer.js  profile-reducer.js  redux-store.js  sidebar-reducer.js  state.js  store.js  users-reducer.js
