[tool.poetry]
name = "social-network"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Shalbuz Mursalov <sh.mursalov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.123.2"
uvicorn = "^0.38.0"
pydantic = "^2.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
